test/TestPhases/parser/valid/importNotBlechId.blc

import mymod "_17Y"

module

activity main()
end

