test/TestPhases/parser/invalid/importMalformed3.blc
import mymod "./adirectory/./mymod"

module

activity main()
end

